--- a/package.json
+++ b/package.json
@@ -8,16 +8,24 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite": "lite-server"
   },
-  "author": "",
+  "author": "imran",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.3.0"
+    "lite-server": "^2.5.4"
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.4.1",
+    "jquery": "^3.3.1",
     "popper.js": "^1.12.9"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Yankee-16/Confusion.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Yankee-16/Confusion/issues"
+  },
+  "homepage": "https://github.com/Yankee-16/Confusion#readme"
 }
